# optarLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  Makefile.in  README.md  configure  configure.ac  libtool  optar-config.hpp.in  optarLibrary.Build.cs  test-optar
Android/jni/: Android.mk  Application.mk
include/: optar.hpp  types.hpp
jni/: Android.mk  Application.mk
macOS/optarLibrary/optarLibrary.xcodeproj/: project.pbxproj
macOS/optarLibrary/optarLibrary.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macOS/optarLibrary/optarLibrary.xcodeproj/xcshareddata/xcschemes/: optarLibrary.xcscheme
source/: logging.cpp  logging.hpp  optar.cpp  optar.hpp  types.cpp  types.hpp
source/ros/: ros-client.cpp  ros-client.hpp
source/ros/opt_msgs/: ArcoreCameraFeatures.h
source/utils/: clock.cpp
src/: CMakeLists.txt  helpers.cpp  helpers.hpp  logging.cpp  logging.hpp  optar.cpp  types.cpp
src/ros/: ros-client.cpp  ros-client.hpp
src/ros/objc/: ros-ios.hpp  ros-ios.mm
src/ros/opt_msgs/: ArcoreCameraFeatures.h  KeyPoint.h  OptarNtpMessage.h
src/utils/: clock.hpp
test/: test-optar.cpp
